--- a/style/style1.css
+++ b/style/style1.css
@@ -195,6 +195,7 @@ img {
     height: 800px;
     width: 100vw;
     flex-grow: 1;
+
   
   margin-top: 75px;
 
@@ -217,13 +218,12 @@ img {
 .encima span{
 
 
-    color: rgb(253, 254, 255);
+    color: rgb(0, 0, 0);
     padding: 1rem;
     margin-top: 2rem;
-    text-align: center;
+    
     font-size: 25px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-   
+  
 
     
    
@@ -234,6 +234,7 @@ img {
 .beach{
     height: 400px;
     width: 400px;
+   margin-top: 40px;
   
     margin-left: 100px;
     border-radius: 50px;
